# rocket_with_sqlite

./: .env  Cargo.toml  Rocket.toml
.sqlx/: query-62c236622e1a0d96d733eb98ee263ac2d134467baed3b26f89d69b7c218102b8.json
db/: body_control.db
src/: main.rs  member.rs  weight.rs
