[package]
name = "rocket_with_sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket={version="0.5.0", features=["json"]}

[dependencies.uuid]
version="1.8.0"
features=[
  "v4",
  "fast-rng",
  "macro-diagnostics",
]

[dependencies.sqlx]
version="0.7.0"
default-features=false
features=["macros", "migrate", "uuid"]

[dependencies.rocket_db_pools]
version="0.1.0"
features=["sqlx_sqlite"]

[dependencies.rocket_sync_db_pools]
version="0.1.0"
features = ["sqlite_pool"]